Fix labels that overflow submit button

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -23,13 +23,13 @@ form
     -moz-border-radius: 5px
     border-radius: 5px
     border: 1px solid #AAAAAA
-    width: 250px
+    min-width: 250px
   input[type="submit"]
     font-size: 20px
-    width: 250px
+    min-width: 250px
     height: 35px
     margin-top: 15px
-    padding: 2px
+    padding: 2px 7px
     background-color: #a61414
     color: white
   margin-bottom: 20px
